--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,11 @@ local.properties
 inf122final.iml
 META-INF/MANIFEST.MF
 .idea/artifacts/inf122final_jar.xml
+src/META-INF/MANIFEST.MF
+.idea/artifacts/game.xml
+.idea/artifacts/game.xml
+src/META-INF/MANIFEST.MF
+src/META-INF/MANIFEST.MF
+.idea/artifacts/game.xml
+src/META-INF/MANIFEST.MF
+.idea/artifacts/game.xml
